inf/prod/frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: erulabscom
    tier: frontend
    deployedBy: deploy-node-app
  name: erulabscom-frontend
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: erulabscom
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: erulabscom
        tier: frontend
        deployedBy: deploy-node-app
    spec:
      containers:
        - image: 'erulabs/erulabscom:78d38cc-1567642903'
          imagePullPolicy: Always
          name: erulabscom
          command:
            - nginx
            - '-g'
            - daemon off;
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 64Mi
            requests:
              cpu: 3m
              memory: 32Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: nginx-configmap
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: erulabscom-regcred
